--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,21 @@
-# Auto detect text files and perform LF normalization
-* text=auto
+# Практическое задание по уроку "Базовые структуры данных"
+# Цель: применить и закрепить базовые знания о структурах данных, решив набор задач.
+
+print('1st program') # Арифметика
+print('(9'+' ** '+'0.5)'+' * '+'5'+' =',9**0.5*5)
+print()
+
+print('2nd program') # Логика
+print('9.99>9.98 and 1000!=1000.1 = ',9.99>9.98 and 1000!=1000.1)
+print()
+
+print('3rd program') # Школьная загадка
+print('2 * 2 + 2 = ',2*2+2)
+print('2 * (2 + 2) = ',2 * (2 + 2))
+print('2 * 2 + 2 == 2 * (2 + 2) = ', 2*2+2 == 2*(2+2))
+print()
+
+print('4th program') # Первый после точки
+x = '123.456'
+x=float(x)
+print('Перая цифра после точки в строке "'+str(x)+'" = ',int(x%1*10))
